Fix spacing and font changes

--- a/src/client/components/About/styles.scss
+++ b/src/client/components/About/styles.scss
@@ -23,6 +23,7 @@
   h2 {
     font-size: 3.3vh;
     text-shadow: 3px 2px 0px rgba(0, 0, 0, 0.25);
+    margin-bottom: 0.4em;
   }
   h2:first-child {
     margin-top: 0;
@@ -42,7 +43,7 @@
     li {
       color: rgba(24, 42, 49, 0.85);
       font-family: $body-font;
-      font-size: 2vh;
+      font-size: 1.9vh;
     }
     ul:nth-child(1) {
       li {
