--- a/src/client/components/Contact/styles.scss
+++ b/src/client/components/Contact/styles.scss
@@ -24,6 +24,9 @@
       float: left;
       height: 100%;
       margin-left: 11%;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
       width: 50%;
       p {
         font-family: $body-font;
@@ -32,7 +35,7 @@
         margin-top: 1%;
       }
       p:first-child {
-        margin-top: 2%;
+        margin-top: 1.2%;
       }
     }
     .contact-right-subhead {
