--- a/src/client/components/Projects/styles.scss
+++ b/src/client/components/Projects/styles.scss
@@ -41,7 +41,7 @@
     color: rgba(0, 0, 0, 0.6);
     font-size: 1.2em;
     letter-spacing: 0.1rem;
-    top: 25%;
+    top: 15%;
     position: relative;
   }
 }
